style.css
body {
    margin: 0;
    padding: 0px;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    
}
.header, footer {
    background-color: #1f2937;
    color: white;
    
}
footer {
    height: 115px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 18px;
}
.header {
    height: 500px;
}
li {
    font-size: 18px;
}
.signup{
    border: 1px solid #1f2937 ;
    background-color: #3882f6;
    color: white;
    font-size: 20px;
    padding: 10px 25px;
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 150px;
    margin-top: 10px;
}
.hero-content,
.head-text {
    margin: 25px 50px 50px 150px;
}
.hero-content {
    display: flex;
    justify-content: space-between;
    padding: 5px 30px ;
    margin-top: 10px;
    
}
.head-text p {
    font-size: 18px;
}
.head-text h1 {
    font-size: 48px;
    font-weight: bolder;
}
.head-text h1, p {
    margin: 0;
    
}
.head-text {
    display: flex;
    flex-direction: row; 
    flex-wrap: wrap;
    padding: 0 0 0 30px;
    margin-top: 50px;
    
}
.main-text {
    display: flex;
    /* width: 30%; */
    
    flex-wrap: wrap;
    flex-direction: column;
    flex: 0 1 42%;
    
}
.head-img img {
    width: 550px;
    height: 200px;
    margin-left: 50px;
    flex: 0 1 auto;
}
.logo {
    font-size: 24px;
}
.links {
    list-style: none;
    display: flex;
    gap: 18px;
}
.main {
    background-color: white;
}
.quote-container {
    background-color: #e5e7eb;
    height: 500px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}
.quote-container p {
    font-size: 36px;
    font-style: italic;
    font-weight: 200;
    color: #1f2937
}
.quote {
    display: flex;
    flex-flow: column wrap;
    flex: 0 1 auto;
    width: 75%;
    align-items: flex-end;
    justify-content: center;
}
.quote aside {
    font-size: 24px;
}
.sign-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 300px;
}
.sign {
    border: 1px solid white;
    background-color: #3882f6;
    width: 75%;
    height: 50%;
    border-radius: 15px;
    padding: 15px 30px;
    display: flex;
    justify-content: center;    
    align-items: center;
    flex-wrap: wrap;
    color: white
}
.sign button {
    background-color: #3882f6;
    border: 1px solid white;
    color: white;
    border-radius: 5px;
    font-size: 18px;
    width: 120px;
    height: 34px;
    display: flex;
    justify-content: center;
    align-items: center; 
    margin-left: 150px;   /* flex: 1; */
}
.sign-text {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
}
.sign-text h1 {
    margin: 0;
}

